--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
       <h1>Today I Learned!</h1>
     </header>
 
+    <form action="">
+      <input type="text" placeholder="Share a fact with the world..." />
+      <span>200</span>
+      <input type="text" placeholder="Trustworthy source..." />
+      <select name="" id="">
+        <option value="">Choose category:</option>
+        <option value="technology">Technology</option>
+        <option value="society">Society</option>
+      </select>
+      <button>Post</button>
+    </form>
+
     <main>
       <aside>
         <ul>
