--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
       <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
       <h1>Today I Learned!</h1>
+      <button>Share a fact</button>
     </header>
 
     <form action="">
@@ -47,6 +48,11 @@
               <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
               <span>#technology#</span>
             </p>
+            <div>
+              <button>👍 <b>24</b></button>
+              <button>🤯 <b>9</b></button>
+              <button>⛔️ <b>4</b></button>
+            </div>
           </li>
           <li>
             <p>
@@ -60,6 +66,11 @@
               >
               <span>#society#</span>
             </p>
+            <div>
+              <button>👍 <b>11</b></button>
+              <button>🤯 <b>2</b></button>
+              <button>⛔️ <b>0</b></button>
+            </div>
           </li>
           <li>
             <p>
@@ -69,6 +80,11 @@
               >
               <span>#society#</span>
             </p>
+            <div>
+              <button>👍 <b>8</b></button>
+              <button>🤯 <b>3</b></button>
+              <button>⛔️ <b>1</b></button>
+            </div>
           </li>
         </ul>
       </section>
