add google fonts and additional styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Coiny&family=Sono:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Today I Learned!</title>
   </head>
@@ -44,10 +50,10 @@
       <section>
         <ul>
           <li>
-            <p>
+            <p class="fact">
               React is being developed by Meta (formerly facebook)
               <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
-              <span>#technology#</span>
+              <span class="tag">#technology#</span>
             </p>
             <div>
               <button>👍 <b>24</b></button>
@@ -56,7 +62,7 @@
             </div>
           </li>
           <li>
-            <p>
+            <p class="fact">
               Millennial dads spend 3 times as much time with their kids than
               their fathers spent with them. In 1982, 43% of fathers had never
               changed a diaper. Today, that number is down to 3%
@@ -65,7 +71,7 @@
                 target="_blank"
                 >(Source)</a
               >
-              <span>#society#</span>
+              <span class="tag">#society#</span>
             </p>
             <div>
               <button>👍 <b>11</b></button>
@@ -74,12 +80,12 @@
             </div>
           </li>
           <li>
-            <p>
+            <p class="fact">
               Lisbon is the capital of Portugal
               <a href="https://en.wikipedia.org/wiki/Lisbon" target="_blank"
                 >(Source)</a
               >
-              <span>#society#</span>
+              <span class="tag">#society#</span>
             </p>
             <div>
               <button>👍 <b>8</b></button>
@@ -88,6 +94,8 @@
             </div>
           </li>
         </ul>
+
+        <p>Build by Dmytr1K</p>
       </section>
     </main>
   </body>
