--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button>Share a fact</button>
     </header>
 
-    <form action="">
+    <form action="" class="fact-form">
       <input type="text" placeholder="Share a fact with the world..." />
       <span>200</span>
       <input type="text" placeholder="Trustworthy source..." />
@@ -94,8 +94,6 @@
             </div>
           </li>
         </ul>
-
-        <p>Build by Dmytr1K</p>
       </section>
     </main>
   </body>
