add some style for list items

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             <p>
               React is being developed by Meta (formerly facebook)
               <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
-              <span class="tag" style="background-color: #3b82f6"
-                >#technology#</span
-              >
             </p>
-            <div>
+            <span class="tag" style="background-color: #3b82f6"
+              >#technology#</span
+            >
+            <div class="vote-buttons">
               <button>👍 <b>24</b></button>
               <button>🤯 <b>9</b></button>
               <button>⛔️ <b>4</b></button>
@@ -76,11 +76,9 @@
                 target="_blank"
                 >(Source)</a
               >
-              <span class="tag" style="background-color: #eab308"
-                >#society#</span
-              >
             </p>
-            <div>
+            <span class="tag" style="background-color: #eab308">#society#</span>
+            <div class="vote-buttons">
               <button>👍 <b>11</b></button>
               <button>🤯 <b>2</b></button>
               <button>⛔️ <b>0</b></button>
@@ -92,11 +90,9 @@
               <a href="https://en.wikipedia.org/wiki/Lisbon" target="_blank"
                 >(Source)</a
               >
-              <span class="tag" style="background-color: #eab308"
-                >#society#</span
-              >
             </p>
-            <div>
+            <span class="tag" style="background-color: #eab308">#society#</span>
+            <div class="vote-buttons">
               <button>👍 <b>8</b></button>
               <button>🤯 <b>3</b></button>
               <button>⛔️ <b>1</b></button>
