--- a/index.html
+++ b/index.html
@@ -14,88 +14,90 @@
     <title>Today I Learned!</title>
   </head>
   <body>
-    <header class="header">
-      <div class="logo">
-        <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
-        <h1>Today I Learned!</h1>
-      </div>
+    <div class="container">
+      <header class="header">
+        <div class="logo">
+          <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
+          <h1>Today I Learned!</h1>
+        </div>
 
-      <button>Share a fact</button>
-    </header>
+        <button>Share a fact</button>
+      </header>
 
-    <form action="" class="fact-form">
-      <input type="text" placeholder="Share a fact with the world..." />
-      <span>200</span>
-      <input type="text" placeholder="Trustworthy source..." />
-      <select name="" id="">
-        <option value="">Choose category:</option>
-        <option value="technology">Technology</option>
-        <option value="society">Society</option>
-      </select>
-      <button>Post</button>
-    </form>
+      <form action="" class="fact-form">
+        <input type="text" placeholder="Share a fact with the world..." />
+        <span>200</span>
+        <input type="text" placeholder="Trustworthy source..." />
+        <select name="" id="">
+          <option value="">Choose category:</option>
+          <option value="technology">Technology</option>
+          <option value="society">Society</option>
+        </select>
+        <button>Post</button>
+      </form>
 
-    <main class="main">
-      <aside>
-        <ul>
-          <li>
-            <button>All</button>
-          </li>
-          <li>
-            <button>Technology</button>
-          </li>
-          <li>
-            <button>Society</button>
-          </li>
-        </ul>
-      </aside>
+      <main class="main">
+        <aside>
+          <ul>
+            <li>
+              <button>All</button>
+            </li>
+            <li>
+              <button>Technology</button>
+            </li>
+            <li>
+              <button>Society</button>
+            </li>
+          </ul>
+        </aside>
 
-      <section>
-        <ul>
-          <li class="fact">
-            <p>
-              React is being developed by Meta (formerly facebook)
-              <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
-            </p>
-            <span class="tag" style="background-color: #3b82f6">#technology#</span>
-            <div class="vote-buttons">
-              <button>👍 <b>24</b></button>
-              <button>🤯 <b>9</b></button>
-              <button>⛔️ <b>4</b></button>
-            </div>
-          </li>
-          <li class="fact">
-            <p>
-              Millennial dads spend 3 times as much time with their kids than their fathers spent
-              with them. In 1982, 43% of fathers had never changed a diaper. Today, that number is
-              down to 3%
-              <a
-                href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
-                target="_blank"
-                >(Source)</a
-              >
-            </p>
-            <span class="tag" style="background-color: #eab308">#society#</span>
-            <div class="vote-buttons">
-              <button>👍 <b>11</b></button>
-              <button>🤯 <b>2</b></button>
-              <button>⛔️ <b>0</b></button>
-            </div>
-          </li>
-          <li class="fact">
-            <p>
-              Lisbon is the capital of Portugal
-              <a href="https://en.wikipedia.org/wiki/Lisbon" target="_blank">(Source)</a>
-            </p>
-            <span class="tag" style="background-color: #eab308">#society#</span>
-            <div class="vote-buttons">
-              <button>👍 <b>8</b></button>
-              <button>🤯 <b>3</b></button>
-              <button>⛔️ <b>1</b></button>
-            </div>
-          </li>
-        </ul>
-      </section>
-    </main>
+        <section>
+          <ul>
+            <li class="fact">
+              <p>
+                React is being developed by Meta (formerly facebook)
+                <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
+              </p>
+              <span class="tag" style="background-color: #3b82f6">#technology#</span>
+              <div class="vote-buttons">
+                <button>👍 <b>24</b></button>
+                <button>🤯 <b>9</b></button>
+                <button>⛔️ <b>4</b></button>
+              </div>
+            </li>
+            <li class="fact">
+              <p>
+                Millennial dads spend 3 times as much time with their kids than their fathers spent
+                with them. In 1982, 43% of fathers had never changed a diaper. Today, that number is
+                down to 3%
+                <a
+                  href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
+                  target="_blank"
+                  >(Source)</a
+                >
+              </p>
+              <span class="tag" style="background-color: #eab308">#society#</span>
+              <div class="vote-buttons">
+                <button>👍 <b>11</b></button>
+                <button>🤯 <b>2</b></button>
+                <button>⛔️ <b>0</b></button>
+              </div>
+            </li>
+            <li class="fact">
+              <p>
+                Lisbon is the capital of Portugal
+                <a href="https://en.wikipedia.org/wiki/Lisbon" target="_blank">(Source)</a>
+              </p>
+              <span class="tag" style="background-color: #eab308">#society#</span>
+              <div class="vote-buttons">
+                <button>👍 <b>8</b></button>
+                <button>🤯 <b>3</b></button>
+                <button>⛔️ <b>1</b></button>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
