--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Coiny&family=Sono:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Coiny&family=Sono:wght@400;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
@@ -60,9 +60,9 @@
               </p>
               <span class="tag" style="background-color: #3b82f6">#technology#</span>
               <div class="vote-buttons">
-                <button>👍 <b>24</b></button>
-                <button>🤯 <b>9</b></button>
-                <button>⛔️ <b>4</b></button>
+                <button>👍 24</button>
+                <button>🤯 9</button>
+                <button>⛔️ 4</button>
               </div>
             </li>
             <li class="fact">
@@ -79,9 +79,9 @@
               </p>
               <span class="tag" style="background-color: #eab308">#society#</span>
               <div class="vote-buttons">
-                <button>👍 <b>11</b></button>
-                <button>🤯 <b>2</b></button>
-                <button>⛔️ <b>0</b></button>
+                <button>👍 11</button>
+                <button>🤯 2</button>
+                <button>⛔️ 0</button>
               </div>
             </li>
             <li class="fact">
@@ -93,9 +93,9 @@
               </p>
               <span class="tag" style="background-color: #eab308">#society#</span>
               <div class="vote-buttons">
-                <button>👍 <b>8</b></button>
-                <button>🤯 <b>3</b></button>
-                <button>⛔️ <b>1</b></button>
+                <button>👍 8</button>
+                <button>🤯 3</button>
+                <button>⛔️ 1</button>
               </div>
             </li>
           </ul>
