--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 React is being developed by Meta (formerly facebook)
                 <a class="source" href="https://opensource.fb.com/" target="_blank">(Source)</a>
               </p>
-              <span class="tag" style="background-color: #3b82f6">#technology#</span>
+              <span class="tag" style="background-color: #3b82f6">technology</span>
               <div class="vote-buttons">
                 <button>👍 24</button>
                 <button>🤯 9</button>
@@ -77,7 +77,7 @@
                   >(Source)</a
                 >
               </p>
-              <span class="tag" style="background-color: #eab308">#society#</span>
+              <span class="tag" style="background-color: #eab308">society</span>
               <div class="vote-buttons">
                 <button>👍 11</button>
                 <button>🤯 2</button>
@@ -91,7 +91,7 @@
                   >(Source)</a
                 >
               </p>
-              <span class="tag" style="background-color: #eab308">#society#</span>
+              <span class="tag" style="background-color: #eab308">society</span>
               <div class="vote-buttons">
                 <button>👍 8</button>
                 <button>🤯 3</button>
